# nanobanana-studio-app

./: .gitignore  CHANGELOG.md  README.md  mockup-ui-polish.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
backend/: .env.example  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
backend/src/: env.ts  index.ts  types.ts
backend/src/middleware/: auth.ts
backend/src/routes/: credits.ts  generate.ts  jobs.ts  webhooks.ts
backend/src/services/: batch-poller.ts  credits.ts  kie.ts  pocketbase.ts  stripe.ts
backend/tests/: auth.test.ts  credits-route.test.ts  credits.test.ts  generate.test.ts  jobs.test.ts  webhooks.test.ts
backend/tests/helpers/: mockPocketBase.ts
deploy/: Caddyfile
docs/: design-system.md
docs/planning/: app-layout-restructure.md  application-specification.md  backend-architecture.md  commercialization.md  implementation-status.md  nano-banana-2-upgrade.md  tauri-sveltekit-setup.md
docs/reviews/: 2026-04-16-main-audit.md
docs/superpowers/plans/: 2026-03-23-test-coverage.md  (+4 more)
pocketbase/: pb_schema.json  setup.sh
pocketbase/pb_migrations/: 1775786719_created_credit_ledger.js  1775786727_created_jobs.js  1775786743_created_job_items.js  1775786751_created_payments.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  models.rs  paths.rs
src-tauri/src/commands/: api.rs  auth.rs  batch.rs  config.rs  files.rs  jobs.rs  mod.rs  settings.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/tests/: setup.ts
(+78 files in other folders)
